cleaned up method & removed confusingTernary