@@ -138,10 +138,12 @@ public final class HearingsHelper {
 
     private static void checkBreakResumeTimes(List<String> errors, HearingDetailType hearingDetailType,
                                               String hearingNumber) {
-        LocalTime breakTime = !isNullOrEmpty(hearingDetailType.getHearingDetailsTimingBreak())
-                ? LocalDateTime.parse(hearingDetailType.getHearingDetailsTimingBreak()).toLocalTime() : null;
-        LocalTime resumeTime = !isNullOrEmpty(hearingDetailType.getHearingDetailsTimingResume())
-                ? LocalDateTime.parse(hearingDetailType.getHearingDetailsTimingResume()).toLocalTime() : null;
+        String timingBreak = hearingDetailType.getHearingDetailsTimingBreak();
+        LocalTime breakTime = isNullOrEmpty(timingBreak) ? null : LocalDateTime.parse(timingBreak).toLocalTime();
+
+        String timingResume = hearingDetailType.getHearingDetailsTimingResume();
+        LocalTime resumeTime = isNullOrEmpty(timingResume) ? null : LocalDateTime.parse(timingResume).toLocalTime();
+
         LocalTime invalidTime = LocalTime.of(0, 0, 0, 0);
         if (invalidTime.equals(breakTime) || invalidTime.equals(resumeTime)) {
             errors.add(String.format(HEARING_BREAK_RESUME_INVALID, hearingNumber));
@@ -214,7 +216,7 @@ public final class HearingsHelper {
         List<DateListedTypeItem> earliestDatePerHearing = hearingCollection.stream()
             .map(HearingsHelper::mapEarliest)
             .filter(Objects::nonNull)
-            .collect(Collectors.toList());
+            .toList();
 
         if (earliestDatePerHearing.isEmpty()) {
             return null;
